Make variable names better

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -29,20 +29,20 @@
    "source": [
     "samples = 8 + 1\n",
     "\n",
-    "x = np.linspace(-2*np.pi, 2*np.pi, samples)\n",
+    "x = np.linspace(-2*np.pi, 2*np.pi, 1000)\n",
+    "x_i = np.linspace(-2*np.pi, 2*np.pi, samples)\n",
+    "\n",
     "y = np.sin(x)\n",
+    "y_i = np.sin(x_i)\n",
     "\n",
-    "smoothed_x = np.linspace(-2*np.pi, 2*np.pi, 1000)\n",
-    "smoothed_y = np.sin(smoothed_x)\n",
-    "\n",
-    "plt.plot(smoothed_x, smoothed_y)\n",
-    "plt.scatter(x, y)\n",
+    "plt.plot(x, y)\n",
+    "plt.scatter(x_i, y_i)\n",
     "plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -61,12 +61,12 @@
     "coefficients = np.zeros(degree)\n",
     "p = np.poly1d(coefficients)\n",
     "\n",
+    "py_i = p(x_i)\n",
     "py = p(x)\n",
-    "smoothed_py = p(smoothed_x)\n",
     "\n",
-    "plt.plot(smoothed_x, smoothed_y)\n",
-    "plt.plot(smoothed_x, smoothed_py)\n",
-    "plt.scatter(x, y)\n",
+    "plt.plot(x, y)\n",
+    "plt.plot(x, py)\n",
+    "plt.scatter(x_i, y_i)\n",
     "plt.show()\n"
    ]
   }
