Show that mse decreased

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -138,6 +138,26 @@
     "plt.scatter(x_i, y_i)\n",
     "plt.show()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.2065448020885349\n"
+     ]
+    }
+   ],
+   "source": [
+    "py_i = p(x_i)\n",
+    "e_i = py_i - y_i\n",
+    "mse = 1/(2*samples) * np.sum(e_i**2)\n",
+    "print(mse)"
+   ]
   }
  ],
  "metadata": {
