Move num samples out

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -27,7 +27,9 @@
     }
    ],
    "source": [
-    "def plot_graph(polynomial_coefficients, num_samples=8+1):\n",
+    "num_samples = 8 + 1\n",
+    "\n",
+    "def plot_graph(polynomial_coefficients):\n",
     "    x_smooth = np.linspace(-2*np.pi, 2*np.pi, 1000)\n",
     "    y_smooth = np.sin(x_smooth)\n",
     "    polynomial = np.poly1d(polynomial_coefficients)\n",
@@ -48,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +62,7 @@
     }
    ],
    "source": [
-    "def mse(polynomial_coefficients, num_samples=8+1):\n",
+    "def mse(polynomial_coefficients):\n",
     "    x = np.linspace(-2*np.pi, 2*np.pi, num_samples)\n",
     "    y = np.sin(x)\n",
     "    \n",
@@ -75,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -87,7 +89,7 @@
     }
    ],
    "source": [
-    "def gradient(polynomial_coefficients, num_samples=8+1):\n",
+    "def gradient(polynomial_coefficients):\n",
     "    x = np.linspace(-2*np.pi, 2*np.pi, num_samples)\n",
     "    y = np.sin(x)\n",
     "    \n",
