Move more out of the functions

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -12,7 +12,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "num_samples = 8 + 1\n",
+    "\n",
+    "low = -2*np.pi\n",
+    "high = 2*np.pi\n",
+    "\n",
+    "x = np.linspace(low, high, num_samples)\n",
+    "y = np.sin(x)\n",
+    "x_smooth = np.linspace(low, high, 1000)\n",
+    "y_smooth = np.sin(x_smooth)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -27,16 +44,10 @@
     }
    ],
    "source": [
-    "num_samples = 8 + 1\n",
     "\n",
     "def plot_graph(polynomial_coefficients):\n",
-    "    x_smooth = np.linspace(-2*np.pi, 2*np.pi, 1000)\n",
-    "    y_smooth = np.sin(x_smooth)\n",
     "    polynomial = np.poly1d(polynomial_coefficients)\n",
     "    p_smooth = polynomial(x_smooth)\n",
-    "    \n",
-    "    x = np.linspace(-2*np.pi, 2*np.pi, num_samples)\n",
-    "    y = np.sin(x)\n",
     "    \n",
     "    plt.plot(x_smooth, y_smooth)\n",
     "    plt.plot(x_smooth, p_smooth)\n",
@@ -50,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -63,12 +74,8 @@
    ],
    "source": [
     "def mse(polynomial_coefficients):\n",
-    "    x = np.linspace(-2*np.pi, 2*np.pi, num_samples)\n",
-    "    y = np.sin(x)\n",
-    "    \n",
     "    polynomial = np.poly1d(polynomial_coefficients)\n",
     "    p = polynomial(x)\n",
-    "    \n",
     "    e = p - y\n",
     "    return 1/(2*num_samples) * np.sum(e**2)\n",
     "\n",
@@ -77,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -90,9 +97,6 @@
    ],
    "source": [
     "def gradient(polynomial_coefficients):\n",
-    "    x = np.linspace(-2*np.pi, 2*np.pi, num_samples)\n",
-    "    y = np.sin(x)\n",
-    "    \n",
     "    # This should only really be computed once, but we'll do it every time for the moment\n",
     "    X = np.vstack([x**i for i in range(degree)]).T\n",
     "    py = X @ polynomial_coefficients\n",
@@ -105,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
