Fix bug with backwards polynomail coefficients

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [
     {
@@ -46,7 +46,7 @@
    "source": [
     "\n",
     "def plot_graph(polynomial_coefficients):\n",
-    "    polynomial = np.poly1d(polynomial_coefficients)\n",
+    "    polynomial = np.poly1d(polynomial_coefficients[::-1])\n",
     "    p_smooth = polynomial(x_smooth)\n",
     "    \n",
     "    plt.plot(x_smooth, y_smooth)\n",
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +74,7 @@
    ],
    "source": [
     "def mse(polynomial_coefficients):\n",
-    "    polynomial = np.poly1d(polynomial_coefficients)\n",
+    "    polynomial = np.poly1d(polynomial_coefficients[::-1])\n",
     "    p = polynomial(x)\n",
     "    e = p - y\n",
     "    return 1/(2*num_samples) * np.sum(e**2)\n",
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [
     {
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [
     {
