Clean up some number formatting

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -59,14 +59,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.24749999999999997\n"
+      "Initial error: 0.247\n"
      ]
     }
    ],
@@ -77,24 +77,19 @@
     "    e = p - y\n",
     "    return 1/(2*num_samples) * np.sum(e**2)\n",
     "\n",
-    "print(mse(polynomial_coefficients))"
+    "print(f\"Initial error: {mse(polynomial_coefficients):.3g}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[5.19874942e-17 1.57351782e-01 2.32019265e-17 1.33405043e-01\n",
-      " 2.06540514e-17 8.96608930e-02 1.21430643e-17 6.17391752e-02\n",
-      " 8.29414662e-18 4.43677364e-02 4.33680869e-18 3.31402340e-02\n",
-      " 6.34258271e-18 2.55636400e-02 6.39679282e-18 2.02483688e-02\n",
-      " 5.80048162e-18 1.63931882e-02 4.44522891e-18 1.35166653e-02\n",
-      " 4.01154804e-18]\n"
+      "Gradient: ['5.2e-17', '0.157', '2.32e-17', '0.133', '2.07e-17', '0.0897', '1.21e-17', '0.0617', '8.29e-18', '0.0444', '4.34e-18', '0.0331', '6.34e-18', '0.0256', '6.4e-18', '0.0202', '5.8e-18', '0.0164', '4.45e-18', '0.0135', '4.01e-18']\n"
      ]
     }
    ],
@@ -107,12 +102,12 @@
     "    gradient = (1/num_samples) * X.T @ e\n",
     "    return gradient\n",
     "\n",
-    "print(gradient(polynomial_coefficients))\n"
+    "print(f\"Gradient: {[f'{x:.3g}' for x in gradient(polynomial_coefficients)]}\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -121,7 +116,7 @@
      "text": [
       "Step: ['5.2e-17', '0.157', '2.32e-17', '0.133', '2.07e-17', '0.0897', '1.21e-17', '0.0617', '8.29e-18', '0.0444', '4.34e-18', '0.0331', '6.34e-18', '0.0256', '6.4e-18', '0.0202', '5.8e-18', '0.0164', '4.45e-18', '0.0135', '4.01e-18']\n",
       "New coefficients: ['-5.2e-17', '-0.157', '-2.32e-17', '-0.133', '-2.07e-17', '-0.0897', '-1.21e-17', '-0.0617', '-8.29e-18', '-0.0444', '-4.34e-18', '-0.0331', '-6.34e-18', '-0.0256', '-6.4e-18', '-0.0202', '-5.8e-18', '-0.0164', '-4.45e-18', '-0.0135', '-4.01e-18']\n",
-      "New MSE: 0.21052824127706454\n"
+      "New MSE: 0.211\n"
      ]
     },
     {
@@ -147,13 +142,13 @@
     "coefficients -= learning_rate * gradient(coefficients)\n",
     "print(f\"New coefficients: {[f'{x:.3g}' for x in coefficients]}\")\n",
     "\n",
-    "print(f\"New MSE: {mse(coefficients)}\")\n",
+    "print(f\"New MSE: {mse(coefficients):.3g}\")\n",
     "plot_graph(coefficients)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
