Make step positive

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 177,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 178,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 179,
    "metadata": {},
    "outputs": [
     {
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 180,
    "metadata": {},
    "outputs": [
     {
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 181,
    "metadata": {},
    "outputs": [
     {
@@ -107,14 +107,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 182,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Step: ['5.2e-17', '0.157', '2.32e-17', '0.133', '2.07e-17', '0.0897', '1.21e-17', '0.0617', '8.29e-18', '0.0444', '4.34e-18', '0.0331', '6.34e-18', '0.0256', '6.4e-18', '0.0202', '5.8e-18', '0.0164', '4.45e-18', '0.0135', '4.01e-18']\n",
+      "Step: ['-5.2e-17', '-0.157', '-2.32e-17', '-0.133', '-2.07e-17', '-0.0897', '-1.21e-17', '-0.0617', '-8.29e-18', '-0.0444', '-4.34e-18', '-0.0331', '-6.34e-18', '-0.0256', '-6.4e-18', '-0.0202', '-5.8e-18', '-0.0164', '-4.45e-18', '-0.0135', '-4.01e-18']\n",
       "New coefficients: ['-5.2e-17', '-0.157', '-2.32e-17', '-0.133', '-2.07e-17', '-0.0897', '-1.21e-17', '-0.0617', '-8.29e-18', '-0.0444', '-4.34e-18', '-0.0331', '-6.34e-18', '-0.0256', '-6.4e-18', '-0.0202', '-5.8e-18', '-0.0164', '-4.45e-18', '-0.0135', '-4.01e-18']\n",
       "New MSE: 0.211\n"
      ]
@@ -136,10 +136,10 @@
     "\n",
     "learning_rate = 1\n",
     "\n",
-    "step = learning_rate * gradient(coefficients)\n",
+    "step = -learning_rate * gradient(coefficients)\n",
     "print(f\"Step: {[f'{x:.3g}' for x in step]}\")\n",
     "\n",
-    "coefficients -= learning_rate * gradient(coefficients)\n",
+    "coefficients += step\n",
     "print(f\"New coefficients: {[f'{x:.3g}' for x in coefficients]}\")\n",
     "\n",
     "print(f\"New MSE: {mse(coefficients):.3g}\")\n",
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 183,
    "metadata": {},
    "outputs": [
     {
@@ -184,8 +184,8 @@
     "epochs = 100_000\n",
     "\n",
     "for epoch in range(epochs):\n",
-    "    step = learning_rate * gradient(coefficients)\n",
-    "    coefficients -= step\n",
+    "    step = -learning_rate * gradient(coefficients)\n",
+    "    coefficients += step\n",
     "    error = mse(coefficients)\n",
     "    if epoch % 10_000 == 0:\n",
     "        print(f\"Epoch {epoch} - Error: {error:.3g}\")\n",
