Delete regression file

--- a/learning-rate.ipynb
+++ b/learning-rate.ipynb
@@ -2,16 +2,35 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from regression import PolynomialRegression"
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "class PolynomialRegression:\n",
+    "    def __init__(self, num_samples = 100, sine_scale = 1):\n",
+    "        self.num_samples = num_samples\n",
+    "        self.sine_scale = sine_scale\n",
+    "        self.x = np.linspace(-1, 1, num_samples)\n",
+    "        self.y = np.sin(self.x * self.sine_scale * np.pi)\n",
+    "        \n",
+    "    def plot_graph(self, coefficients, show_scatter=False):\n",
+    "        x_smooth = np.linspace(-1, 1, 1000)        \n",
+    "        y_smooth = np.sin(x_smooth * self.sine_scale * np.pi)\n",
+    "        p = np.poly1d(coefficients[::-1])\n",
+    "\n",
+    "        plt.plot(x_smooth, y_smooth)\n",
+    "        if show_scatter:\n",
+    "            plt.scatter(self.x, self.y)\n",
+    "        plt.plot(x_smooth, p(x_smooth), color='red')\n",
+    "        plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
