--- a/learning-rate.ipynb
+++ b/learning-rate.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,13 +10,20 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "class PolynomialRegression:\n",
-    "    def __init__(self, num_samples = 100, sine_scale = 1):\n",
+    "    def __init__(self, degree, num_samples = 100, sine_scale = 1):\n",
+    "        self.degree = degree\n",
     "        self.num_samples = num_samples\n",
     "        self.sine_scale = sine_scale\n",
+    "        \n",
     "        self.x = np.linspace(-1, 1, num_samples)\n",
     "        self.y = np.sin(self.x * self.sine_scale * np.pi)\n",
+    "        self.X = np.vstack([self.x**i for i in range(degree + 1)]).T\n",
+    "        \n",
+    "    def check_coefficients(self, coefficients):\n",
+    "        assert len(coefficients) == self.degree + 1\n",
     "        \n",
     "    def plot_graph(self, coefficients, show_scatter=False):\n",
+    "        self.check_coefficients(coefficients)\n",
     "        x_smooth = np.linspace(-1, 1, 1000)        \n",
     "        y_smooth = np.sin(x_smooth * self.sine_scale * np.pi)\n",
     "        p = np.poly1d(coefficients[::-1])\n",
@@ -30,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -45,7 +52,7 @@
     }
    ],
    "source": [
-    "r = PolynomialRegression(sine_scale=1)\n",
+    "r = PolynomialRegression(degree=2)\n",
     "r.plot_graph([1, 0, 2])"
    ]
   }
