--- a/learning-rate.ipynb
+++ b/learning-rate.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,12 +37,18 @@
     "    def mse(self, coefficients):\n",
     "        self.check_coefficients(coefficients)\n",
     "        y_pred = self.X @ coefficients\n",
-    "        return 1/(2*self.num_samples) * np.sum((y_pred - self.y) ** 2)"
+    "        return 1/(2*self.num_samples) * np.sum((y_pred - self.y) ** 2)\n",
+    "        \n",
+    "    def gradient(self, coefficients):\n",
+    "        self.check_coefficients(coefficients)\n",
+    "        y_pred = self.X @ coefficients\n",
+    "        return 1/self.num_samples * self.X.T @ (y_pred - self.y)\n",
+    "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -65,19 +71,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Error: 0.247\n"
+      "Error: 0.247\n",
+      "Gradient: ['-2.7e-17', '-0.315', '-1.71e-17', '-0.123']\n"
      ]
     }
    ],
    "source": [
-    "print(f\"Error: {r.mse(coefficients):.3g}\")"
+    "print(f\"Error: {r.mse(coefficients):.3g}\")\n",
+    "print(f\"Gradient: {[f\"{g:.3g}\" for g in r.gradient(coefficients)]}\")"
    ]
   }
  ],
